--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,6 +21,11 @@
     text-decoration: line-through;
 }
 
-.tachado{
-    background-color: #ff0000;
+#root{
+    background-color: #ffe5a7;
+    padding-bottom: 20px;
+    border-radius: 10px;
+}
+html body{
+    background-image: url(../img/fondo2.jpg);
 }
