--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,9 +23,13 @@
 
 #root{
     background-color: #ffe5a7;
-    padding-bottom: 20px;
     border-radius: 10px;
+    padding: 20px;
 }
 html body{
-    background-image: url(../img/fondo2.jpg);
+    imagebackground-size: cover;
+}
+
+h4{
+    text-align: center;
 }
